added setting to filter disabled jobs

--- a/locale/de_DE/LC_MESSAGES/jenkins-indicator.po
+++ b/locale/de_DE/LC_MESSAGES/jenkins-indicator.po
@@ -31,3 +31,6 @@ msgstr "Einstellungen"
 
 msgid "auto-refresh interval (seconds)"
 msgstr "Interval für autom. Aktualisierung (Sekunden)"
+
+msgid "filter disabled jobs"
+msgstr "Inaktive Jobs ausblenden"
