added treatment of never built jobs

--- a/locale/de_DE/LC_MESSAGES/jenkins-indicator.po
+++ b/locale/de_DE/LC_MESSAGES/jenkins-indicator.po
@@ -59,6 +59,9 @@ msgstr "Instabile Jobs anzeigen"
 msgid "show failed jobs"
 msgstr "Fehlgeschlagene Jobs anzeigen"
 
+msgid "show never built jobs"
+msgstr "Noch nie gestartete Jobs anzeigen"
+
 msgid "show disabled jobs"
 msgstr "Inaktive Jobs anzeigen"
 
