--- a/locale/de_DE/LC_MESSAGES/jenkins-indicator.po
+++ b/locale/de_DE/LC_MESSAGES/jenkins-indicator.po
@@ -67,3 +67,6 @@ msgstr "Inaktive Jobs anzeigen"
 
 msgid "show aborted jobs"
 msgstr "Abgebrochene Jobs anzeigen"
+
+msgid "'Green Baals' plugin"
+msgstr "'Green Baals' plugin"
