fix typos in translation

--- a/locale/de_DE/LC_MESSAGES/jenkins-indicator.po
+++ b/locale/de_DE/LC_MESSAGES/jenkins-indicator.po
@@ -68,5 +68,5 @@ msgstr "Inaktive Jobs anzeigen"
 msgid "show aborted jobs"
 msgstr "Abgebrochene Jobs anzeigen"
 
-msgid "'Green Baals' plugin"
-msgstr "'Green Baals' plugin"
+msgid "'Green Balls' plugin"
+msgstr "'Green Balls' plugin"
