added setting for transient notifications

--- a/locale/de_DE/LC_MESSAGES/jenkins-indicator.po
+++ b/locale/de_DE/LC_MESSAGES/jenkins-indicator.po
@@ -44,6 +44,9 @@ msgstr "Benachrichtigungen"
 msgid "notification for finished jobs"
 msgstr "Benachrichtigung für abgeschlossene Jobs"
 
+msgid "stack notifications in message tray"
+msgstr "Benachrichtigungen im MessageTray sammeln"
+
 msgid "job filters"
 msgstr "Job Filter"
 
