--- a/locale/de_DE/LC_MESSAGES/jenkins-indicator.po
+++ b/locale/de_DE/LC_MESSAGES/jenkins-indicator.po
@@ -19,6 +19,9 @@ msgstr "Keine Jobs gefunden"
 msgid "invalid Jenkins CI Server web frontend URL"
 msgstr "ungültige Jenkins CI Server Web Frontend URL"
 
+msgid "Jenkins jobs"
+msgstr "Jenkins Jobs"
+
 msgid "Job finished"
 msgstr "Job abgeschlossen"
 
