improved translations and error messages

--- a/locale/de_DE/LC_MESSAGES/jenkins-indicator.po
+++ b/locale/de_DE/LC_MESSAGES/jenkins-indicator.po
@@ -19,6 +19,9 @@ msgstr "Keine Jobs gefunden"
 msgid "Invalid Jenkins CI Server web frontend URL"
 msgstr "Ungültige Jenkins CI Server Web Frontend URL"
 
+msgid "Invalid Jenkins CI Server web frontend URL (HTTP Error %s)"
+msgstr "Ungültige Jenkins CI Server Web Frontend URL (HTTP Error %s)"
+
 msgid "Jenkins jobs"
 msgstr "Jenkins Jobs"
 
