Allow to filter Jobs in the Menu For now, the settings element in a text field where all the jobs name has to be comma separated. Ideally, it should be a two list pane with all the jobs retrieved from Jenkins

--- a/locale/fr_FR/LC_MESSAGES/jenkins-indicator.po
+++ b/locale/fr_FR/LC_MESSAGES/jenkins-indicator.po
@@ -115,3 +115,6 @@ msgstr "Afficher les jobs désactivés"
 
 msgid "Show aborted jobs"
 msgstr "Afficher les jobs annulés"
+
+msgid "Jobs to Show"
+msgstr "Jobs affichés"
