Added german translations and readme fixes

--- a/locale/fr_FR/LC_MESSAGES/jenkins-indicator.po
+++ b/locale/fr_FR/LC_MESSAGES/jenkins-indicator.po
@@ -116,5 +116,5 @@ msgstr "Afficher les jobs désactivés"
 msgid "Show aborted jobs"
 msgstr "Afficher les jobs annulés"
 
-msgid "Jobs to Show"
+msgid "Jobs to show"
 msgstr "Jobs affichés"
